--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.StudyAnalayzer"
         tools:targetApi="31">
         <activity
-            android:name=".Home"
+            android:name=".Pomodrome"
+            android:exported="false" />
+        <activity
+            android:name=".Notes"
+            android:exported="false" />
+        <activity
+            android:name=".Fregment_holder"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
