--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.StudyAnalayzer"
         tools:targetApi="31">
         <activity
+            android:name=".homefragment.mcqtest.mcqTest"
+            android:exported="false" />
+        <activity
             android:name=".Pomodrome"
             android:exported="false" />
         <activity
@@ -24,12 +27,10 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
